@startuml
interface EstadoUnidad{
+actualizar(inventario)
+moverse(direccion:Direccion,mapa,coordenada)
+atacar(direccion:Direccion,mapa)
+recibirDanio(danioTerrestre:Danio,danioAereo:Danio)
+setUnidad(unidad)
+terminarConstruccion()
+dehacerConstruccion()
}

abstract Unidad{
-costoEnMineral:Recurso
-costoEnGas:Recurso
-costoSuministro:Recurso
-tiempoConstruccion:int
-coordenada:Coordenada
-danioAereo:Danio
-danioTerrestre:Danio
-rango:int
-vida:Vida
-estado:EstadoUnidad
-nombre:Nombre
-cantidadDeKills:int
-aerea:bool
+compararCoordenadas(coordenada):bool
+actualizar(inventario)
{abstract}+actualizarUnidad(inventario)
{abstract}+regenerar()
+establecerEstado(estado)
+reducirTiempoConstruccion(tiempoAReducir):bool
+terminarConstruccion()
+establecerCoordenada(coorddenada)
+moverse(direccion:Direccion)
+atacar(coordenada)
+recibirDanio(danioTerrestre:Danio,danioAereo:Danio)
{abstract}+ejecutarDanio(danioTerrestre,danioAereo)
+ejecutarAtaque(objetivo:Coordenada)
+establecerVisibilidad(Visivilidad)
+volverInvisible()
+volverVisible()
+devolverNombre():Nombre
{abstract}+consumirRecursosParaGenerarse(inventario)
+devolverSuministro(inventario)
+restaurarRecursosParaConstruccion(inventario)
+consumirRecursosParaEvolucion(inventario)
+evolucionar(unidad,inventario):Unidad
+destruirse(inventario)
+agregarSuministro(inventario)
+extraerRecursos(inventario)
{abstract}+generarse(edificio,inventario):Unidad
{abstract}+ocupar(terreno):bool
}
abstract UnidadProtoss{

-escudo:Escudo
+ocupar(terreno):bool
+consumirRecursosParaGenerarse(inventario)
+ejecutarDanio(danioTerrestre,danioAereo)
+regenerar()
+toData():objectNode
}
abstract UnidadZerg{

+ocupar(terreno):bool
+consumirRecursosParaGenerarse(inventario)
+consumirRecursosParaEvolucion(inventario)
+ejecutarDanio(danioTerrestre,danioAereo)
+regenerar()
+toData():objectNode
}

class UnidadEnConstruccion{
}

class UnidadDestruida{
}

class UnidadOperativa{
}

class Danio{
-poder:int
+Danio(poder:int)
+aplicarDanio(estadistica:int)
toData():ObjectNodo

}
class Nombre{
-nombre:String
+Nombre(nombre)
+esIgual(nombre:Nombre):bool
+devolverValor():String
toData():ObjectNodo
}
class Escudo{
-poderMaximo:int
-poderActual:int
-tasaRegeneracion:double
+Escudo(valorMaximo:int)
+recibirDanio(Danio):int
+regenerar()
toData():ObjectNodo
}

class Vida{
-valorMaximo:int
-valorActual:int
-tasaRegeneracion:double
+Vida(valorMaximo:int)
+recibirDanio(Danio):bool
+regenerar()
toData():ObjectNodo
}
abstract Recurso
Unidad -up-> Recurso
Unidad --* Nombre
Unidad --* Vida
Unidad -*  Danio
Unidad <|-- UnidadProtoss
UnidadProtoss --* Escudo
Unidad <|--- UnidadZerg
EstadoUnidad <- Unidad
EstadoUnidad <|... UnidadOperativa
EstadoUnidad <|.. UnidadEnConstruccion
EstadoUnidad <|.. UnidadDestruida
@enduml